# CFD_Disciplines

./: .aux.h.swp  .gitignore  .solvers.c.swp  Makefile  README.md  aux.c  aux.h  input.h  main.c  readme.md  solvers.c  solvers.h
1d_shocktube/: Makefile  aux.c  aux.h  input.h  main.c  mesh.c  mesh.h  plote.gnu  plotp.gnu  plotr.gnu  plots  plotu.gnu  run  shockTube  solvers.c  solvers.h
cc-297/: .gitignore  CMakeLists.txt  driver.cpp  main.cpp  setup.inp
cc-297/etc/: bashrc
cc-297/lib/: Aux.H  BoundaryConditions.H  BvpOde.C  BvpOde.H  CMakeLists.txt  IOobject.C  IOobject.H  LinSys.C  LinSys.H  Macros.H  Matrix.C  Matrix.H  Mesh.C  Mesh.H  Node.C  Node.H  SecondOrderODE.H  Vector.C  Vector.H
cc-297/lib/IOobject/: CMakeLists.txt
cc-297/lib/IOobject/include/: IOobject.H  IOobject.h
cc-297/lib/IOobject/src/: IOobject.cpp
cc-297/lib/LinearAlgebra/: CMakeLists.txt
cc-297/lib/LinearAlgebra/include/: LinSys.H  LinSys.h  Matrix.H  Matrix.h  Vector.h
cc-297/lib/LinearAlgebra/src/: LinSys.C  LinSys.cpp  Matrix.cpp  Vector.cpp
cc-297/lib/ODESolver/: CMakeLists.txt
cc-297/lib/ODESolver/include/: BoundaryConditions.h  BvpOde.H  BvpOde.h  Mesh.H  Mesh.h  SecondOrderODE.H  SecondOrderODE.h
cc-297/lib/ODESolver/src/: BoundaryConditions.cpp  BvpOde.C  BvpOde.cpp  Mesh.cpp
cc-297/lib/primitive/: CMakeLists.txt
cc-297/lib/primitive/include/: Aux.H
cc-297/src/: BoundaryConditions.C  BoundaryConditions.H  BvpOde.C  BvpOde.H  CMakeLists.txt  Driver.C  IOobject.C  IOobject.H  Main.C  Mesh.H  Node.H  SecondOrderODE.H  main.C  setup.inp
cc-297/src/Schemes/: CMakeLists.txt  ConvectiveSchemes.C  ConvectiveSchemes.H
cc-297/src/libs/: CMakeLists.txt  cmake_install.cmake
cc-299/1d_shocktube/: Makefile  mesh.c  solvers.c
scientific_C++/: BoundaryConditions.C  BoundaryConditions.H  BvpODE.C  BvpODE.H  FDGrid.C  FDGrid.H  IOTools.C  IOTools.H  LinSys.C  LinSys.H  Makefile  Matrix.C  Matrix.H  Node.H  ScndOrderODE.H  Vector.C  Vector.H  main.C  tmpIOTools.H
